--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
-    "zustand": "^3.7.1"
+    "zustand": "^4.0.0-rc.1"
   },
   "scripts": {
     "start": "react-scripts start",
